<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/selamatdatang"
                        android:textColor="#DE202020"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/deksripsi_hitungvolume" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_panjang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:hint="@string/hint_panjang"
                            android:inputType="numberDecimal"
                            android:paddingBottom="18dp"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_lebar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:hint="@string/hint_lebar"
                            android:inputType="numberDecimal"
                            android:paddingBottom="18dp"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edt_tinggi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:hint="@string/hint_tinggi"
                            android:inputType="numberDecimal"
                            android:paddingBottom="18dp"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_hitung"
                        android:layout_width="200dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/btn_round_effect"
                        android:text="@string/hitung"
                        android:textAllCaps="false"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_hasil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center"
                        android:text="@string/hasil"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>